# HelloWorld

./: CMakeLists.txt  README.md  main.ilk  test_compilation.cpp
.kiro/specs/cpp-learning-curriculum/: design.md  requirements.md  tasks.md
assessments/: README.md
exercises/: README.md
modules/: README.md
modules/module-1-fundamentals/: README.md  module1_loader.cpp  test_module1.cpp  validate_module1.cpp
modules/module-1-fundamentals/exercises/: exercise-1-variables-datatypes.cpp  exercise-2-operators.cpp
modules/module-1-fundamentals/lessons/: lesson-1-variables-data-types.cpp  lesson-2-operators.cpp
projects/: README.md
src/: main.cpp
src/core/: Exercise.cpp  Exercise.h  Lesson.cpp  Lesson.h  ProgressTracker.cpp  ProgressTracker.h
src/utils/: CodeCompiler.cpp  CodeCompiler.h  TestRunner.cpp  TestRunner.h
